test(persistencia): aísla GestorJSONTest con @TempDir y actualiza asserts para boolean