@@ -1,11 +1,12 @@
 package sigma.persistencia;
 
 import org.junit.jupiter.api.*;
+import org.junit.jupiter.api.io.TempDir;
 import sigma.modelo.*;
 
 import java.io.File;
 import java.nio.file.Files;
-import java.nio.file.Paths;
+import java.nio.file.Path;
 import java.time.LocalDate;
 import java.util.ArrayList;
 import java.util.List;
@@ -14,38 +15,38 @@ import static org.junit.jupiter.api.Assertions.*;
 
 class GestorJSONTest {
 
-    private static final String RUTA_TEST_USUARIOS = "test_usuarios.json";
-    private static final String RUTA_TEST_METAS = "test_metas.json";
     private GestorJSON gestorJSON;
+
+    @TempDir
+    Path tempDir;
 
     @BeforeEach
     void setUp() {
         gestorJSON = new GestorJSON();
     }
 
-    @AfterEach
-    void tearDown() {
-        File f1 = new File(RUTA_TEST_USUARIOS);
-        File f2 = new File(RUTA_TEST_METAS);
-        if (f1.exists()) f1.delete();
-        if (f2.exists()) f2.delete();
-    }
-
     @Test
     @DisplayName("Debería guardar y cargar una lista de usuarios correctamente")
     void testGuardarYCargarUsuarios() {
+        String ruta = tempDir.resolve("usuarios.json").toString();
+
         ArrayList<Usuario> usuariosOriginal = new ArrayList<>();
         usuariosOriginal.add(new Usuario("juan", "pass123", RolUsuario.SUPERUSUARIO));
         usuariosOriginal.add(new Usuario("maria", "pass456", RolUsuario.USUARIO));
         usuariosOriginal.add(new Usuario("pedro", "pass789", RolUsuario.LIDER));
 
-        gestorJSON.guardarUsuarios(usuariosOriginal, RUTA_TEST_USUARIOS);
-        ArrayList<Usuario> usuariosCargados = gestorJSON.cargarUsuarios(RUTA_TEST_USUARIOS);
+        assertTrue(gestorJSON.guardarUsuarios(usuariosOriginal, ruta));
+
+        ArrayList<Usuario> usuariosCargados = gestorJSON.cargarUsuarios(ruta);
 
         assertNotNull(usuariosCargados);
         assertEquals(3, usuariosCargados.size());
         assertEquals("juan", usuariosCargados.get(0).getNombre());
         assertEquals(RolUsuario.SUPERUSUARIO, usuariosCargados.get(0).getRol());
+        assertEquals("maria", usuariosCargados.get(1).getNombre());
+        assertEquals(RolUsuario.USUARIO, usuariosCargados.get(1).getRol());
+        assertEquals("pedro", usuariosCargados.get(2).getNombre());
+        assertEquals(RolUsuario.LIDER, usuariosCargados.get(2).getRol());
     }
 
     @Test
@@ -60,10 +61,13 @@ class GestorJSONTest {
     @Test
     @DisplayName("Debería guardar y cargar lista vacía de usuarios")
     void testGuardarYCargarUsuariosListaVacia() {
+        String ruta = tempDir.resolve("usuarios_vacio.json").toString();
+
         ArrayList<Usuario> usuariosVacio = new ArrayList<>();
 
-        gestorJSON.guardarUsuarios(usuariosVacio, RUTA_TEST_USUARIOS);
-        ArrayList<Usuario> usuariosCargados = gestorJSON.cargarUsuarios(RUTA_TEST_USUARIOS);
+        assertTrue(gestorJSON.guardarUsuarios(usuariosVacio, ruta));
+
+        ArrayList<Usuario> usuariosCargados = gestorJSON.cargarUsuarios(ruta);
 
         assertNotNull(usuariosCargados);
         assertTrue(usuariosCargados.isEmpty());
@@ -72,12 +76,15 @@ class GestorJSONTest {
     @Test
     @DisplayName("Debería guardar y cargar una meta sin tareas correctamente")
     void testGuardarYCargarMetaSinTareas() {
+        String ruta = tempDir.resolve("metas.json").toString();
+
         ArrayList<Meta> metasOriginal = new ArrayList<>();
         Meta meta = new Meta("Proyecto SIGMA");
         metasOriginal.add(meta);
 
-        gestorJSON.guardarMetas(metasOriginal, RUTA_TEST_METAS);
-        ArrayList<Meta> metasCargadas = gestorJSON.cargarMetas(RUTA_TEST_METAS);
+        assertTrue(gestorJSON.guardarMetas(metasOriginal, ruta));
+
+        ArrayList<Meta> metasCargadas = gestorJSON.cargarMetas(ruta);
 
         assertNotNull(metasCargadas);
         assertEquals(1, metasCargadas.size());
@@ -88,6 +95,8 @@ class GestorJSONTest {
     @Test
     @DisplayName("Debería guardar y cargar una meta con tareas correctamente")
     void testGuardarYCargarMetaConTareas() {
+        String ruta = tempDir.resolve("metas_con_tareas.json").toString();
+
         ArrayList<Meta> metasOriginal = new ArrayList<>();
         Meta meta = new Meta("Proyecto SIGMA");
 
@@ -100,8 +109,9 @@ class GestorJSONTest {
         meta.agregarTarea(tarea);
         metasOriginal.add(meta);
 
-        gestorJSON.guardarMetas(metasOriginal, RUTA_TEST_METAS);
-        ArrayList<Meta> metasCargadas = gestorJSON.cargarMetas(RUTA_TEST_METAS);
+        assertTrue(gestorJSON.guardarMetas(metasOriginal, ruta));
+
+        ArrayList<Meta> metasCargadas = gestorJSON.cargarMetas(ruta);
 
         assertNotNull(metasCargadas);
         assertEquals(1, metasCargadas.size());
@@ -125,10 +135,13 @@ class GestorJSONTest {
     @Test
     @DisplayName("Debería guardar y cargar lista vacía de metas")
     void testGuardarYCargarMetasListaVacia() {
+        String ruta = tempDir.resolve("metas_vacio.json").toString();
+
         ArrayList<Meta> metasVacio = new ArrayList<>();
 
-        gestorJSON.guardarMetas(metasVacio, RUTA_TEST_METAS);
-        ArrayList<Meta> metasCargadas = gestorJSON.cargarMetas(RUTA_TEST_METAS);
+        assertTrue(gestorJSON.guardarMetas(metasVacio, ruta));
+
+        ArrayList<Meta> metasCargadas = gestorJSON.cargarMetas(ruta);
 
         assertNotNull(metasCargadas);
         assertTrue(metasCargadas.isEmpty());
@@ -137,13 +150,16 @@ class GestorJSONTest {
     @Test
     @DisplayName("Debería guardar múltiples metas y cargarlas correctamente")
     void testGuardarYCargarMultiplesMetas() {
+        String ruta = tempDir.resolve("metas_multiples.json").toString();
+
         ArrayList<Meta> metasOriginal = new ArrayList<>();
         metasOriginal.add(new Meta("Meta 1"));
         metasOriginal.add(new Meta("Meta 2"));
         metasOriginal.add(new Meta("Meta 3"));
 
-        gestorJSON.guardarMetas(metasOriginal, RUTA_TEST_METAS);
-        ArrayList<Meta> metasCargadas = gestorJSON.cargarMetas(RUTA_TEST_METAS);
+        assertTrue(gestorJSON.guardarMetas(metasOriginal, ruta));
+
+        ArrayList<Meta> metasCargadas = gestorJSON.cargarMetas(ruta);
 
         assertEquals(3, metasCargadas.size());
         assertEquals("Meta 1", metasCargadas.get(0).getNombre());
@@ -154,15 +170,17 @@ class GestorJSONTest {
     @Test
     @DisplayName("Debería sobrescribir archivo al guardar nuevamente")
     void testSobrescrituraDeArchivo() {
+        String ruta = tempDir.resolve("metas_sobrescritura.json").toString();
+
         ArrayList<Meta> metasPrimera = new ArrayList<>();
         metasPrimera.add(new Meta("Meta original"));
-        gestorJSON.guardarMetas(metasPrimera, RUTA_TEST_METAS);
+        assertTrue(gestorJSON.guardarMetas(metasPrimera, ruta));
 
         ArrayList<Meta> metasSegunda = new ArrayList<>();
         metasSegunda.add(new Meta("Meta nueva"));
-        gestorJSON.guardarMetas(metasSegunda, RUTA_TEST_METAS);
+        assertTrue(gestorJSON.guardarMetas(metasSegunda, ruta));
 
-        ArrayList<Meta> metasCargadas = gestorJSON.cargarMetas(RUTA_TEST_METAS);
+        ArrayList<Meta> metasCargadas = gestorJSON.cargarMetas(ruta);
         assertEquals(1, metasCargadas.size());
         assertEquals("Meta nueva", metasCargadas.get(0).getNombre());
     }
@@ -170,6 +188,8 @@ class GestorJSONTest {
     @Test
     @DisplayName("Debería serializar y deserializar fechas LocalDate correctamente")
     void testSerializacionFechas() throws Exception {
+        String ruta = tempDir.resolve("metas_fechas.json").toString();
+
         ArrayList<Meta> metasOriginal = new ArrayList<>();
         Meta meta = new Meta("Meta con fechas");
 
@@ -182,13 +202,13 @@ class GestorJSONTest {
         meta.agregarTarea(tarea);
         metasOriginal.add(meta);
 
-        gestorJSON.guardarMetas(metasOriginal, RUTA_TEST_METAS);
+        assertTrue(gestorJSON.guardarMetas(metasOriginal, ruta));
 
-        String contenido = new String(Files.readAllBytes(Paths.get(RUTA_TEST_METAS)));
+        String contenido = new String(Files.readAllBytes(Path.of(ruta)));
         assertTrue(contenido.contains("2025-01-15"));
         assertTrue(contenido.contains("2025-12-20"));
 
-        ArrayList<Meta> metasCargadas = gestorJSON.cargarMetas(RUTA_TEST_METAS);
+        ArrayList<Meta> metasCargadas = gestorJSON.cargarMetas(ruta);
         Tarea tareaCargada = metasCargadas.get(0).getTareas().get(0);
 
         assertEquals(LocalDate.of(2025, 1, 15), tareaCargada.getFechaInicio());
@@ -198,19 +218,21 @@ class GestorJSONTest {
     @Test
     @DisplayName("Debería serializar y deserializar enums correctamente")
     void testSerializacionEnum() throws Exception {
+        String ruta = tempDir.resolve("usuarios_enums.json").toString();
+
         ArrayList<Usuario> usuariosOriginal = new ArrayList<>();
         usuariosOriginal.add(new Usuario("juan", "pass123", RolUsuario.SUPERUSUARIO));
         usuariosOriginal.add(new Usuario("maria", "pass456", RolUsuario.LIDER));
         usuariosOriginal.add(new Usuario("pedro", "pass789", RolUsuario.USUARIO));
 
-        gestorJSON.guardarUsuarios(usuariosOriginal, RUTA_TEST_USUARIOS);
+        assertTrue(gestorJSON.guardarUsuarios(usuariosOriginal, ruta));
 
-        String contenido = new String(Files.readAllBytes(Paths.get(RUTA_TEST_USUARIOS)));
+        String contenido = new String(Files.readAllBytes(Path.of(ruta)));
         assertTrue(contenido.contains("SUPERUSUARIO"));
         assertTrue(contenido.contains("LIDER"));
         assertTrue(contenido.contains("USUARIO"));
 
-        ArrayList<Usuario> usuariosCargados = gestorJSON.cargarUsuarios(RUTA_TEST_USUARIOS);
+        ArrayList<Usuario> usuariosCargados = gestorJSON.cargarUsuarios(ruta);
         assertEquals(RolUsuario.SUPERUSUARIO, usuariosCargados.get(0).getRol());
         assertEquals(RolUsuario.LIDER, usuariosCargados.get(1).getRol());
         assertEquals(RolUsuario.USUARIO, usuariosCargados.get(2).getRol());
